# wasmtime-demo

./: .env  .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  server.go
bill_contract/: Cargo.toml  bill-contract.go
bill_contract/src/: lib.rs
cbor_test/: Cargo.toml
cbor_test/src/: main.rs
contract/: api.go  runtime.go
rating_contract/: Cargo.toml
rating_contract/src/: lib.rs  main.rs
server/: server.go
src/: contract_state.env  hello.rs  hello.wasm  lib.rs  lib.wasm  sc_script.sh
store_state/bill_contract/: userbill.json
store_state/rating_contract/: rating.json  seller_rating.json
store_state/vote_contract/: votefile.json
votiing-contract/: voting-contract.go
voting_contract/: Cargo.toml  voting-contract.go
voting_contract/src/: lib.rs
